--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "classnames": "^2.1.5",
-    "gh-pages": "^2.2.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
